leptos_macro/tests/view/22_optional_no_strip_prop_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/view/22_optional_no_strip_prop_wrong_type.rs:11:36
   |
11 |             <Inner required=42 val="hello"/>
   |                                    ^^^^^^^ expected `Option<String>`, found `&str`
   |
   = note:   expected enum `std::option::Option<std::string::String>`
           found reference `&'static str`
